--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,64 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-31 00:12:03 -0500 
+%% Created for Evan Bollig at 2013-10-31 05:01:54 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Komatitsch2010b,
+	Author = {Dimitri Komatitsch and Gordon Erlebacher and Dominik G\"oddeke and David Mich\'ea},
+	Date-Added = {2013-10-31 09:34:35 +0000},
+	Date-Modified = {2013-10-31 09:35:04 +0000},
+	Doi = {10.1016/j.jcp.2010.06.024},
+	Journal = {J. Comput. Phys.},
+	Number = {20},
+	Pages = {7692-7714},
+	Title = {High-order finite-element seismic wave propagation modeling with {MPI} on a large {GPU} cluster},
+	Volume = {229},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.jcp.2010.06.024}}
+
+@article{Komatitsch2010a,
+	Author = {Dimitri Komatitsch and Dominik G\"oddeke and Gordon Erlebacher and David Mich\'ea},
+	Date-Added = {2013-10-31 09:34:35 +0000},
+	Date-Modified = {2013-10-31 09:35:10 +0000},
+	Doi = {10.1007/s00450-010-0109-1},
+	Journal = {Computer Science Research and Development},
+	Number = {1-2},
+	Pages = {75-82},
+	Title = {Modeling the propagation of elastic waves using spectral elements on a cluster of 192 {GPU}s},
+	Volume = {25},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s00450-010-0109-1}}
+
+@article{Komatitsch2009,
+	Author = {Dimitri Komatitsch and David Mich\'ea and Gordon Erlebacher},
+	Date-Added = {2013-10-31 09:34:35 +0000},
+	Date-Modified = {2013-10-31 09:34:46 +0000},
+	Doi = {10.1016/j.jpdc.2009.01.006},
+	Journal = {Journal of Parallel and Distributed Computing},
+	Number = {5},
+	Pages = {451-460},
+	Title = {Porting a high-order finite-element earthquake modeling application to {NVIDIA} graphics cards using {CUDA}},
+	Volume = {69},
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.jpdc.2009.01.006}}
+
+@inproceedings{phillips2010,
+	Author = {Phillips, E.H. and Fatica, M.},
+	Booktitle = {Parallel Distributed Processing (IPDPS), 2010 IEEE International Symposium on},
+	Date-Added = {2013-10-31 09:14:30 +0000},
+	Date-Modified = {2013-10-31 09:14:37 +0000},
+	Doi = {10.1109/IPDPS.2010.5470394},
+	Issn = {1530-2075},
+	Keywords = {computer graphic equipment;message passing;microprocessor chips;parallel programming;CUDA cluster;GFlops;GPU cluster;GPU execution;Himeno benchmark;MPI;NVIDIA Tesla C1060 GPU;data transfer;linear scaling;memory bandwidth utilization;multiGPU implementation;parallel programming;Acceleration;Bandwidth;Clocks;Convergence;Design optimization;Frequency;Kernel;Navier-Stokes equations;Poisson equations;Throughput},
+	Pages = {1-10},
+	Title = {Implementing the Himeno benchmark with CUDA on GPU clusters},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/IPDPS.2010.5470394}}
 
 @article{Divo2005,
 	Author = {Eduardo Divo and Alain J. Kassab},
